<resources>

    <string name="app_name">FitHub</string>

    <string name="main_bottom_home">홈</string>
    <string name="main_bottom_community">커뮤니티</string>
    <string name="main_bottom_around">둘러보기</string>
    <string name="main_bottom_my">마이핏허브</string>

    <!-- 온보딩 -->
    <string name="onboarding_skip">건너뛰기</string>
    <string name="onboarding_next">다음</string>
    <string name="onboarding_finish">핏허브 시작하기</string>

    <string name="onboarding_title_1">핏허브에 어서오세요!</string>
    <string name="onboarding_subTitle_1">재미있고 내게 맞는 운동이 찾고싶어\n우주를 떠돌다 지친 당신, 핏허브 행성에 잘 오셨어요!</string>

    <string name="onboarding_title_2">오운완 인증하고 레벨 UP!</string>
    <string name="onboarding_subTitle_2">인증샷 한 장으로 경험치가 쌓여요.\n우주먼지부터 은하까지 성장하면서 재밌게 운동해요!</string>

    <string name="onboarding_title_3">운동정보를 공유해요</string>
    <string name="onboarding_subTitle_3">운동에 대한 고민이 있을 때, 알려주고싶은 꿀팁이 있을 때\n핏허브에서 다른 사람과 이야기해봐요.</string>

    <string name="onboarding_title_4">\'특별한\' 운동, 어디서 하지?</string>
    <string name="onboarding_subTitle_4">재미있고 특별한 운동, 핏허브에 모아 놓았어요.\n운동시설 정보를 탐색해봐요.</string>


    <string name="error_phone_number">휴대폰 번호가 올바르지 않습니다</string>
    <string name="error_password_regex">특수문자, 숫자, 영문 조합으로 입력하세요</string>
    <string name="error_password_length">비밀번호는 8 ~ 16자 이내로 입력하세요</string>
    <string name="error_name_regex">이름을 정확히 입력해주세요</string>
    <string name="success_password">사용할 수 있는 비밀번호입니다</string>
    <string name="error_password_not_match">비밀번호가 일치하지 않습니다</string>
    <string name="success_password_match">비밀번호가 일치합니다</string>
    <string name="error_not_exist_birth">생년월일 및 성별을 정확히 입력해주세요</string>
    <string name="error_under_age">만 14세 미만은 서비스 이용이 불가합니다</string>
    <string name="error_nickname_regex">한글 혹은 영문으로만 입력해주세요.</string>
    <string name="error_same_nickname">이미 존재하는 닉네임 입니다.</string>
    <string name="success_can_use_nickname">사용 가능한 닉네임 입니다.</string>

    <string name="sign_in_subtitle">특별한 운동정보 커뮤니티 플랫폼</string>
    <string name="sign_in_phone_number">전화번호로 로그인 / 회원가입</string>

    <string name="sign_in_with_phone_title">로그인하고\n핏허브를 즐겨보세요!</string>

    <string name="common_phone_number">휴대폰 번호</string>
    <string name="common_sign_in">로그인</string>
    <string name="common_password">비밀번호</string>
    <string name="common_password_hint">비밀번호 입력</string>
    <string name="common_phone_telecom">통신사</string>
    <string name="common_birth">생년월일 및 성별</string>
    <string name="common_authcode">인증번호</string>
    <string name="common_nickname">닉네임</string>
    <string name="common_name">이름</string>
    <string name="common_next">다음</string>
    <string name="common_to_home">홈으로</string>
    <string name="common_upload">등록</string>
    <string name="common_send_authcode">인증번호 전송</string>
    <string name="common_see_more">더보기</string>
    <string name="common_certificate">운동인증</string>
    <string name="common_board">핏사이트</string>
    <string name="common_select_all">전체선택</string>
    <string name="common_email">이메일</string>
    <string name="common_sign_out">회원탈퇴</string>


    <string name="common_find_password">비밀번호 찾기</string>
    <string name="common_sign_up">회원가입</string>

    <string name="sign_up_agreement_notice">회원가입 전,\n약관 동의가 필요해요.</string>
    <string name="sign_up_agreement_agree_all">약관 전체동의</string>

    <string name="sign_up_with_phone_number">휴대폰번호 가입</string>
    <string name="sign_up_with_phone_number_notice">휴대폰번호는 아이디로 사용됩니다.</string>

    <string name="sign_up_with_phone_number_hint">01012345678</string>
    <string name="sign_up_with_phone_select_telecom_hint">통신사 선택</string>
    <string name="sign_up_with_phone_birth_hint">YYMMDD</string>
    <string name="sign_up_with_phone_name_hint">이름 입력</string>
    <string name="sign_up_with_phone_authcode_hint">인증번호 6자리 입력</string>
    <string name="sign_up_with_phone_nickname_hint">닉네임 입력</string>

    <string name="sign_up_with_phone_auth_code">인증번호 확인</string>
    <string name="sign_up_with_phone_auth_code_notice">휴대폰으로 발송한 인증번호를 입력해주세요</string>
    <string name="sign_up_with_phone_auth_code_didnt_get">인증번호가 오지 않는다면?</string>
    <string name="sign_up_with_phone_auth_code_retry"><u>재발송</u></string>

    <string name="sign_up_with_phone_set_password">비밀번호 설정</string>
    <string name="sign_up_with_phone_reset_password">비밀번호 재설정</string>
    <string name="sign_up_with_phone_set_password_notice">비밀번호를 설정해주세요.</string>
    <string name="sign_up_with_phone_additional_password">영어, 숫자, 특수문자를 조합하여 8~16자로 입력해주세요</string>

    <string name="sign_up_with_phone_user_profile">프로필 설정</string>
    <string name="sign_up_with_phone_user_profile_notice">나를 표현할 사진과 닉네임을 등록해주세요.</string>
    <string name="sign_up_with_phone_user_profile_additional">한글 혹은 영문을 포함하여 1 ~ 8자로 입력해주세요.</string>

    <string name="sign_up_with_phone_interest_sports">핏허브에서 인증하고 싶은\n메인 운동 1개를 선택해 주세요.</string>
    <string name="sign_up_with_phone_interest_sports_notice">메인운동은 언제든 수정이 가능해요!</string>

    <string name="finish_sign_up">핏허브 입장하기</string>


    <!-- 비밀번호 찾기 -->
    <string name="find_password_auth_phone_number_notice">가입할 때 입력했던 정보를 확인합니다.</string>

    <!-- 소셜 회원가입 -->
    <string name="social_sign_up_input_info">기본정보 입력</string>
    <string name="social_sign_up_input_info_notice">이름과 생년월일을 입력해주세요</string>

    <!-- 회원가입 마무리 -->
    <string name="finish_sign_up_title">%s님 만나서 반가워요!</string>
    <string name="finish_sign_up_subtitle">그럼 특별한 운동과 사람들이 있는\n핏허브로 떠나 보실까요?</string>

    <!-- 커뮤니티 -->
    <string name="community_hint_toolbar_edt">키워드와 태그로 검색하기</string>
    <string name="community_sort_recent">최신순</string>
    <string name="community_sort_popular">인기순</string>

    <string name="community_floating_certificate">운동 인증하기</string>
    <string name="community_floating_board">게시글 작성하기</string>

    <!-- 인증 작성 / 수정 -->
    <string name="write_certificate">운동 인증하기</string>
    <string name="modify_certificate">인증 수정하기</string>
    <string name="certificate_swap_photo">사진 바꾸기</string>

    <string name="certificate_content_hint">오늘 운동은 어땠나요? 느낀점을 작성해봐요</string>
    <string name="certificate_tag_hint">+태그추가</string>
    <string name="certificate_tag_notice">태그는 최대 4개까지 등록할 수 있어요.</string>

    <string name="certificate_select_exercise">운동 종목 선택</string>
    <string name="certificate_notice">부적절한 게시물이 등록될 경우 관리자에 의해 비노출 및 삭제 처리 될 수 있습니다.</string>

    <!-- 게시글 작성 / 수정 -->
    <string name="write_board">게시글 작성하기</string>
    <string name="modify_board">게시글 수정하기</string>

    <string name="board_title_hint">제목을 입력해주세요.</string>
    <string name="board_content_hint">꿀팁을 공유하거나 운동과 관련해서 궁금한 점을 물어보세요.</string>
    <string name="board_selected_photo_count">%d / 10</string>

    <!-- 커뮤니티 공통 -->
    <string name="community_save_comment">댓글 남기기</string>

    <!-- 검색 -->
    <string name="search_recommend_keywords">추천 검색어</string>
    <string name="search_none_title">\'%s\'에 대한 검색 결과가 없어요.</string>
    <string name="search_none_notice">다른 검색어를 입력해보세요!</string>
    
    <!-- 홈 -->
    <string name="home_user_nickname"> %s님,</string>
    <string name="home_user_notice">오늘도 힘내서 운동 해봐요!</string>
    <string name="home_goto_certificate">운동 인증하러 가기</string>
    <string name="home_certificate_percent">인증 달성률</string>
    <string name="home_certificate_percent_count"> / %d</string>
    <string name="home_certificate_count_this_month">이번 달 인증 횟수</string>
    <string name="home_certificate_count_continue">연속 인증 일수</string>
    <string name="home_certificate_count_this_month_count">%d회</string>
    <string name="home_certificate_count_continue_count">%d일</string>
    <string name="home_look_around_gym_near_me">내 근처 운동시설 둘러보기</string>
    <string name="home_best_certificate_user">최고의 운동 인증러</string>
    <string name="home_best_certificate_standard">%s 00:00 기준</string>
    <string name="home_best_certificate_times">%d회</string>
    <string name="home_best_certificate_rank_see_more">랭킹 더보기</string>

    <!-- 알림 -->
    <string name="alarm_title">알림</string>
    <string name="alarm_when_none_title">새로운 알림이 없습니다.</string>
    <string name="alarm_when_none_subtitle">새로운 알림이 오면 알려드릴게요!</string>

    <!-- 북마크 -->
    <string name="bookmark_title">북마크</string>
    <string name="bookmark_no_articles_title">보관된 글이 없습니다</string>
    <string name="bookmark_no_articles_subtitle">핏사이트에서 글을 읽고 관심글을 보관해보세요!</string>
    <string name="bookmark_goto_see_articles">글 보러가기</string>

    <!-- 내 레벨 -->
    <string name="my_level_title">내 레벨</string>
    <string name="fithub_exercise_level">핏허브의 운동 레벨</string>

    <!-- 마이페이지 -->
    <string name="my_page_exercise_main">메인 운동</string>
    <string name="my_page_exercise_sub">서브 운동</string>
    <string name="my_page_exercise_change_main">메인 운동 변경</string>
    <string name="my_page_manage_my_write">내 글 관리</string>
    <string name="my_page_version_info">버전 정보</string>
    <string name="my_page_sign_out">로그아웃</string>
    <string name="my_page_change_to_default_image">프로필 사진 삭제</string>

    <!-- 내 글 관리 -->
    <string name="manage_my_write_title">내 글 관리</string>
    <string name="remove_selection">선택삭제</string>
    <string name="certificate_none_title">운동 인증 이력이 없습니다.</string>
    <string name="certificate_none_subtitle">오늘의 운동을 인증해보세요!</string>
    <string name="certificate_none_btn">인증 하러가기</string>
    <string name="article_none_title">작성한 게시글이 없습니다.</string>
    <string name="article_none_subtitle">핏사이트에서 운동이야기를 나눠보세요!</string>
    <string name="article_none_btn">글 쓰러가기</string>

    <!-- 개인 정보 설정 -->
    <string name="manage_my_info_title">개인 정보 설정</string>
    <string name="manage_my_info_non_uploaded">미등록</string>

    <!-- 둘러보기 -->
    <string name="around_hint_toolbar_edt">지역, 시설명으로 검색하기</string>
    <string name="around_see_map">지도보기</string>
    <string name="around_see_list">목록보기</string>

    <!--알림 설정-->
    <string name="alarm_setting_title">알림 설정</string>
    <string name="alarm_setting_my_write_alarm">내 게시글 알림</string>
    <string name="alarm_setting_marketing_alarm">마케팅 메세지 알림</string>

    <!-- 비밀번호 변경 -->
    <string name="change_password_check_title">비밀번호 확인</string>
    <string name="change_password_check_subtitle">재설정을 위해 기존 비밀번호를 입력해주세요</string>
    <string name="change_password_change_title">비밀번호 변경</string>

    <!-- 다른 유저 프로필 -->
    <string name="other_user_profile_when_no_articles">아직 작성한 글이 없습니다.</string>

    <!-- 준비중 -->
    <string name="comming_soon_title">아직 준비중 이에요!</string>
    <string name="comming_soon_subtitle">핏허브에서 열심히 공사중이니\n조금만 기다려주시면 감사하겠습니다!</string>

    <!-- 이용 약관 -->
    <string name="terms_title">약관 및 정책</string>
    <string name="terms_title_1">서비스 이용 약관</string>
    <string name="terms_title_2">개인정보 처리 방침</string>
    <string name="terms_title_3">위치정보 이용 약관</string>
    <string name="terms_title_4">마케팅 정보 수신 동의 약관</string>

</resources>