<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fragment"
            type="com.proteam.fithub.presentation.ui.signup.authcode.SignUpAuthCodeFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true">

        <TextView
            android:id="@+id/fg_sign_up_auth_code_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/pretendard_semibold"
            android:includeFontPadding="false"
            android:lineHeight="32dp"
            android:text="@string/sign_up_with_phone_auth_code"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fg_sign_up_auth_code_tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_with_phone_auth_code_notice"
            android:textSize="14sp"
            android:lineHeight="20dp"
            android:fontFamily="@font/pretendard_regular"
            android:includeFontPadding="false"
            android:textColor="@color/gray_700"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/fg_sign_up_auth_code_tv_title"
            app:layout_constraintTop_toBottomOf="@id/fg_sign_up_auth_code_tv_title" />

        <com.proteam.fithub.presentation.component.ComponentEdtAuthCode
            android:id="@+id/fg_sign_up_auth_code_edt_auth_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/fg_sign_up_auth_code_tv_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/fg_sign_up_auth_code_edt_auth_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_with_phone_auth_code_didnt_get"
                android:textSize="12sp"
                android:lineHeight="16dp"
                android:fontFamily="@font/pretendard_regular"
                android:includeFontPadding="false"
                android:textColor="@color/gray_700" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="6dp"
                android:textSize="12sp"
                android:fontFamily="@font/pretendard_medium"
                android:textColor="@color/gray_800"
                android:lineHeight="16dp"
                android:text="@string/sign_up_with_phone_auth_code_retry" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fg_sign_up_auth_code_btn_next"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/selector_bg_btn_signin"
            android:enabled="false"
            android:fontFamily="@font/pretendard_medium"
            android:includeFontPadding="false"
            android:lineHeight="24dp"
            android:onClick="@{() -> fragment.onNextBtnClicked()}"
            android:text="@string/common_next"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>