<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fragment"
            type="com.proteam.fithub.presentation.ui.signup.phone.SignUpPhoneNumberFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fg_sign_up_phone_number_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:text="@string/sign_up_with_phone_number"
            android:fontFamily="@font/pretendard_semibold"
            android:textSize="24sp"
            android:lineHeight="32dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/fg_sign_up_phone_number_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_with_phone_number_notice"
            android:textColor="@color/gray_700"
            android:textSize="14sp"
            android:lineHeight="20dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/pretendard_regular"
            android:includeFontPadding="false"
            app:layout_constraintTop_toBottomOf="@id/fg_sign_up_phone_number_title"
            app:layout_constraintStart_toStartOf="@+id/fg_sign_up_phone_number_title" />

        <com.proteam.fithub.presentation.ui.custom.CustomEdtWithStrokeAndTitle
            android:id="@+id/fg_sign_up_phone_number_edt_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/fg_sign_up_phone_number_subtitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fg_sign_up_phone_number_btn_next"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/selector_bg_btn_signin"
            android:fontFamily="@font/pretendard_medium"
            android:includeFontPadding="false"
            android:lineHeight="24dp"
            android:enabled="false"
            android:text="@string/common_next"
            android:onClick="@{() -> fragment.onNextClicked()}"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>