<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fragment"
            type="com.proteam.fithub.presentation.ui.findpassword.phone.FindPasswordAuthPhoneNumberFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fg_find_password_auth_phone_number_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_find_password"
            android:textColor="@color/black"
            android:fontFamily="@font/pretendard_semibold"
            android:includeFontPadding="false"
            android:textSize="24sp"
            android:lineHeight="32dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/fg_find_password_auth_phone_number_tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_password_auth_phone_number_notice"
            android:textColor="@color/gray_700"
            android:fontFamily="@font/pretendard_regular"
            android:includeFontPadding="false"
            android:textSize="14sp"
            android:lineHeight="20dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/fg_find_password_auth_phone_number_tv_title"
            app:layout_constraintTop_toBottomOf="@id/fg_find_password_auth_phone_number_tv_title" />


        <com.proteam.fithub.presentation.component.ComponentEdtPhoneNumber
            android:id="@+id/fg_find_password_auth_phone_number_edt_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/fg_find_password_auth_phone_number_tv_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fg_find_password_auth_phone_number_btn_send_auth_code"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/selector_bg_btn_signin"
            android:enabled="false"
            android:fontFamily="@font/pretendard_medium"
            android:includeFontPadding="false"
            android:lineHeight="24dp"
            android:onClick="@{() -> fragment.onSendAuthClicked()}"
            android:text="@string/common_send_authcode"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>