<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fragment"
            type="com.proteam.fithub.presentation.ui.managewrite.certificate.ManageMyCertificateFragment" />

        <variable
            name="viewModel"
            type="com.proteam.fithub.presentation.ui.managewrite.certificate.viewmodel.ManageMyCertificateViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_default">

        <CheckBox
            android:id="@+id/fg_my_certificate_btn_select_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginVertical="5dp"
            android:background="@android:color/transparent"
            android:button="@android:color/transparent"
            android:checked="@={viewModel.isAllClicked}"
            android:drawableStart="@drawable/selector_sign_up_agreement_checkbox"
            android:drawablePadding="10dp"
            android:includeFontPadding="false"
            android:onClick="@{() -> fragment.onAllSelectClicked()}"
            android:text="@string/common_select_all"
            android:textAppearance="@style/Body_large_medium"
            android:textColor="@color/text_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:onClick="@{() -> fragment.onSelectDeleteClicked()}"
            android:text="@string/remove_selection"
            android:textAppearance="@style/Body_small_medium"
            android:textColor="@color/text_sub01"
            app:layout_constraintBottom_toBottomOf="@id/fg_my_certificate_btn_select_all"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/fg_my_certificate_btn_select_all" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fg_my_certificate_rv_contents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:clipToPadding="false"
            android:paddingTop="10dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fg_my_certificate_btn_select_all"
            app:layout_constraintVertical_bias="0"
            app:spanCount="2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fg_my_certificate_layout_none"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/bg_default"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fg_my_certificate_btn_select_all">

            <TextView
                android:id="@+id/item_bookmark_none_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:text="@string/certificate_none_title"
                android:textAppearance="@style/Body_large_medium"
                android:textColor="@color/text_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_bookmark_none_tv_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/certificate_none_subtitle"
                android:textAppearance="@style/Body_medium_regular"
                android:textColor="@color/text_sub02"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_bookmark_none_tv_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> fragment.onWriteCertificate()}"
                android:layout_marginTop="15dp"
                android:background="@drawable/btn_bookmark_see_articles"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_bookmark_none_tv_subtitle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="14dp"
                    android:layout_marginVertical="7dp"
                    android:includeFontPadding="false"
                    android:text="@string/certificate_none_btn"
                    android:textAppearance="@style/Body_medium_medium"
                    android:textColor="@color/text_main_btn"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>